# hangar

./: .gitignore  .npmrc  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  index.css  main.tsx
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/permissions/: allow-project-files.toml
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: BuildLogViewer.tsx  CommandPalette.tsx  DeployDialog.tsx  EasLoginRequired.tsx  ErrorBoundary.tsx  ExpoDoctorSection.tsx  NextActionHero.tsx  OnboardingTour.tsx  ProjectSwitcher.tsx  PublishUpdateDialog.tsx  RemoveProjectDialog.tsx  SdkVersionSection.tsx  Toaster.tsx  VerifyBeforeBuildSection.tsx  shared.tsx
apps/desktop/src/lib/: build-log-cache.ts  bundle-service.ts  credentials-service.ts  eas-auth.ts  eas-service.ts  errors.ts  expo-config-service.ts  expo-doctor-service.ts  file-actions.ts  next-action.ts  notify.ts  onboarding.ts  project-cache.ts  project-watch.ts  projects.ts  services.ts  theme.ts  updates-summary.ts  web-filesystem.ts
apps/desktop/src/routes/: AppRouter.tsx
apps/desktop/src/screens/: BuildsScreen.tsx  BundleScreen.tsx  CredentialsScreen.tsx  DashboardScreen.tsx  EasWelcomeScreen.tsx  EnvironmentsScreen.tsx  NoProjectsOnboarding.tsx  ProjectHealthScreen.tsx  ReleasesScreen.tsx  RouterScreen.tsx  SettingsScreen.tsx  UpdatesScreen.tsx  (+1 more)
(+10 files in other folders)
