[package]
name = "expopilot-desktop"
version = "0.1.0"
description = "ExpoPilot — Ship with confidence."
authors = ["ExpoPilot"]
edition = "2021"

[lib]
name = "expopilot_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "8"
tauri-plugin-opener = "2"
